--- a/WebArcadium/app/views/welcome/index.html.erb
+++ b/WebArcadium/app/views/welcome/index.html.erb
@@ -9,7 +9,8 @@
 
 <div id="content">
   <h1>WebArcadium</h1>
-  <%= button_to 'Tic-Tac-Toe', tic_tac_toe_game_path, :method => :get %>
-  <%= button_to 'Connect Four', connect_four_game_path, :method => :get %>
-</div>
+  <div id="buttons">
+    <%= button_to 'Tic-Tac-Toe', tic_tac_toe_game_path, :method => :get %>
+    <%= button_to 'Connect Four', connect_four_game_path, :method => :get %>
+  </div>
 </div>
