--- a/WebArcadium/app/assets/stylesheets/tic_tac_toe.css
+++ b/WebArcadium/app/assets/stylesheets/tic_tac_toe.css
@@ -1,10 +1,15 @@
+
+* {
+  font-family: 'Ubuntu', sans-serif;
+}
+
 .Square {
   border: 1px solid black;
   height: 100px;
   width: 100px;
   font-size: 500%;
   text-align: center;
-  color: blue;
+  color: #237EE8;
 }
 
 #message {
@@ -30,4 +35,29 @@ h1{
   margin-left: auto;
   margin-right: auto;
   text-align: center
+}
+
+#x_win {
+  margin-left: auto;
+  margin-right: auto;
+  text-align:center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#o_win {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+body {
+  color: #237EE8;
+  background-image: url("/assets/background.png");
+}
+
+#nav_bar {
+  font-size: 150%;
 }
